--- a/site/src/pages/site/pedidoproduto/index.scss
+++ b/site/src/pages/site/pedidoproduto/index.scss
@@ -44,7 +44,6 @@
         min-width: 653px;
         height: 246px;
         border: 1px solid #646464;
-        padding: 20px;
     }
 
     .prodinfo img {
@@ -53,6 +52,20 @@
         border: 1px solid #3D3D3D;
         border-radius: 5px;
         margin-right: 10px;
+    }
+
+    .rendercar {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid #000;
+        border-radius: 5px;
+        padding: 20px;
+        align-items: center;
+        width: 577px;
+    }
+
+    #title {
+        font: 20px "Inter";
     }
 
     .infostext {
@@ -65,6 +78,7 @@
         flex-direction: row;
         justify-content: space-between;
         margin: 10px 0px;
+        gap: 30px;
     }
 
     .infostext div {
@@ -75,13 +89,14 @@
     .infostext h3 {
         font: 15px "Inter";
         color: #000;
+        width: max-content;
     }
 
     .infostext p {
         font: 12px "Inter";
-        color: #383838;
-        font-weight: 200;
-        width: 134px;
+        color: rgb(90, 90, 90);
+        font-weight: 400;
+        max-width: 135px;
     }
 
     .infoentrega {
