--- a/site/src/pages/site/pedidoproduto/index.scss
+++ b/site/src/pages/site/pedidoproduto/index.scss
@@ -44,6 +44,7 @@
         min-width: 653px;
         height: 246px;
         border: 1px solid #646464;
+        border-radius: 5px;
     }
 
     .prodinfo img {
@@ -62,10 +63,60 @@
         padding: 20px;
         align-items: center;
         width: 577px;
+        height: 400px;
+        overflow-y: scroll;
+    }
+
+    .rendercar::-webkit-scrollbar {
+        width: 5px;
+    }
+      
+    .rendercar::-webkit-scrollbar-track {
+        background: transparent;
+    }
+      
+    .rendercar::-webkit-scrollbar-thumb {
+        background-color: rgb(88, 88, 88);
+        border-radius: 20px;
+        border: none;
     }
 
     #title {
         font: 20px "Inter";
+        align-self: center;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+
+    #indisp {
+        font: 15px "Inter";
+        align-items: center;
+        width: auto;
+        margin: 10px 0px 0px 0px;
+    }
+
+    .blockk {
+        display: flex;
+        flex-direction: row;
+        border: 1px solid #000;
+        align-items: center;
+        border-radius: 3px;
+        padding: 10px;
+        width: 100%;
+        height: 130px;
+        justify-content: space-between;
+    }
+
+    .blockk img {
+        width: 100px;
+        height: 100px;
+        border: 1px solid #000;
+        border-radius: 4px;
+    }
+    
+    .blockk h1 {
+        font: 20px "Inter";
+        color: #000;
     }
 
     .infostext {
@@ -76,9 +127,10 @@
     .infostext section {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         margin: 10px 0px;
         gap: 30px;
+        padding: 0px 20px;
     }
 
     .infostext div {
