--- a/site/src/pages/site/pedidoproduto/index.scss
+++ b/site/src/pages/site/pedidoproduto/index.scss
@@ -62,7 +62,7 @@
         border-radius: 5px;
         padding: 20px;
         align-items: center;
-        width: 577px;
+        width: 700px;
         height: 400px;
         overflow-y: scroll;
     }
@@ -95,28 +95,22 @@
         margin: 10px 0px 0px 0px;
     }
 
-    .blockk {
+    .block {
         display: flex;
         flex-direction: row;
-        border: 1px solid #000;
         align-items: center;
         border-radius: 3px;
         padding: 10px;
         width: 100%;
-        height: 130px;
+        height: 80px;
         justify-content: space-between;
     }
-
-    .blockk img {
-        width: 100px;
-        height: 100px;
-        border: 1px solid #000;
-        border-radius: 4px;
-    }
     
-    .blockk h1 {
+    .block h1 {
         font: 20px "Inter";
         color: #000;
+        width: 100px;
+        text-align: center;
     }
 
     .infostext {
