--- a/site/src/pages/site/pedidoproduto/index.scss
+++ b/site/src/pages/site/pedidoproduto/index.scss
@@ -104,6 +104,7 @@
         width: 100%;
         height: 80px;
         justify-content: space-between;
+        cursor: pointer;
     }
     
     .block h1 {
