--- a/site/src/components/site/itens-notificacoes/item1/index.scss
+++ b/site/src/components/site/itens-notificacoes/item1/index.scss
@@ -4,6 +4,7 @@
     padding: 10px;
     margin: 10px 0px;
     align-items: center;
+    width: 70vw;
     justify-content: space-between;
 
     @media (max-width: 500px) {
