--- a/site/src/pages/site/market/index.scss
+++ b/site/src/pages/site/market/index.scss
@@ -44,6 +44,34 @@
         height: 200px;
     }
     
+    #btcarregar {
+        width: 150px;
+        height: 40px;
+        font: 20px "Inter";
+        align-self: center;
+        background-color: transparent;
+        border-radius: 3px;
+        border: 1px solid #3d3d3d;
+        cursor: pointer;
+        transition: 0.4s;
+    }
+
+    #btcarregar:active {
+        background-color: #272727;
+        color: #fff;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font: 18px "Inter";
+    }
+
+    .content img {
+        height: 30px;
+    }
+
     .section-mid {
         display: flex;
         flex-direction: column;
