--- a/site/src/pages/adm/adm-central/index.scss
+++ b/site/src/pages/adm/adm-central/index.scss
@@ -44,4 +44,14 @@
         height: 403px;
         overflow-y: scroll;
     }
+
+    .genereta div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 5px 0px;
+        border: 1px solid #3D3D3D;
+        border-radius: 3px;
+    }
 }
