--- a/site/src/pages/adm/adm-pedidos-concluidos/index.scss
+++ b/site/src/pages/adm/adm-pedidos-concluidos/index.scss
@@ -64,6 +64,7 @@
         flex-direction: column;
         width: 948px;
         height: 450px;
+        overflow-y: scroll;
         border: 1px solid;
         margin-top: 50px;
         padding: 5px 0px 0px 0px;
