--- a/site/src/components/site/resp-usermenu/index.scss
+++ b/site/src/components/site/resp-usermenu/index.scss
@@ -1,7 +1,8 @@
 .comp-user-menu-resp{
     display: none;
     flex-direction: column;
-    max-width: 320px;
+    align-self: center;
+    max-width: 100vw;
     gap: 10px;
     border: none;
 
@@ -53,6 +54,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin-bottom: 50px;
 
         
     #selectbox {
@@ -79,12 +81,12 @@
     .off {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         transition: width 0.3s ease, height 0.3s ease, opacity 1s ease;
         opacity: 0;
         height: 0;
         overflow: hidden;
-        gap: 5px;
+        gap: 2px;
     }
 
     .off a {
@@ -101,7 +103,9 @@
     }
 
     .show {
-        height: 100px;
+        height: 70px;
+        position: absolute;
+        padding: 50px 10px ;
         opacity: 1;
     }
 
