--- a/site/src/pages/site/informações/index.scss
+++ b/site/src/pages/site/informações/index.scss
@@ -37,7 +37,7 @@
         width: 520px;
     }
     
-    p {
+    .Pagina-informações > p {
         width: 300px;
         margin-left: 25px;
         font: 16px "Inter";
