--- a/site/src/pages/site/telausuario/index.scss
+++ b/site/src/pages/site/telausuario/index.scss
@@ -64,8 +64,7 @@
 
     #blocks div {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
         align-items: flex-end;
         justify-content: center;
         margin: 0px 10px;
