--- a/site/src/pages/site/tela-produto/index.scss
+++ b/site/src/pages/site/tela-produto/index.scss
@@ -224,6 +224,11 @@
     .items {
         display: flex;
         flex-direction: row;
-        gap: 20px;   
+        gap: 20px; 
+    }
+
+    .items a {
+        text-decoration: none;
+        color: #000;
     }
 }
