--- a/site/src/pages/site/tela-produto/index.scss
+++ b/site/src/pages/site/tela-produto/index.scss
@@ -227,6 +227,10 @@
         gap: 20px; 
     }
 
+    .items img {
+        height: 188px;
+    }
+
     .items a {
         text-decoration: none;
         color: #000;
