ajustes componentes de produtos, foto carregando

--- a/site/src/components/site/compras-pagamento/index.scss
+++ b/site/src/components/site/compras-pagamento/index.scss
@@ -5,7 +5,7 @@
     padding: 20px;
     margin: 5px;
     img{
-        padding: 70px;
+        height: 100px;
         border: 1px solid rgb(206, 206, 206);
     }
 
