--- a/site/src/components/site/itens-carrinho/index.scss
+++ b/site/src/components/site/itens-carrinho/index.scss
@@ -27,7 +27,7 @@
     }
 
     #img{
-        padding: 50px;
+        height: 100px;
         border: 1px solid #868686;
         margin: 0px 30px 0px 0px;
     }
